--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "NestedTags",
+  "name": "sn-components-api",
   "version": "1.0.0",
+  "main": "dist/dist.js",
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-newer": "^1.2.0",
     "babel-cli": "^6.18.0",
     "babel-preset-env": "^1.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.16.0",
+    "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
-    "grunt-browserify": "^5.0.0"
+    "grunt-browserify": "^5.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-newer": "^1.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/sn-extensions/components-api.git"
   }
 }
