--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "sn-components-api",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "main": "dist/dist.js",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-env": "^1.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.16.0",
-    "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0",
-    "grunt-browserify": "^5.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-newer": "^1.2.0"
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "grunt": "^1.0.4",
+    "grunt-babel": "^8.0.0",
+    "grunt-browserify": "^5.3.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-newer": "^1.3.0"
   },
   "repository": {
     "type": "git",
