--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "sn-components-api",
-  "version": "1.2.8",
+  "version": "2.0.0",
   "main": "dist/dist.js",
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "grunt": "^1.0.4",
-    "grunt-babel": "^8.0.0",
-    "grunt-browserify": "^5.3.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-newer": "^1.3.0"
+    "ts-loader": "^8.0.9",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.5",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/sn-extensions/components-api.git"
+  },
+  "scripts": {
+    "bundle": "webpack",
+    "lint": "tslint --project ."
   }
 }
