--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "2.0.0",
   "main": "dist/dist.js",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@types/node": "^14.14.6",
+    "babel-loader": "^8.1.0",
     "ts-loader": "^8.0.9",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5",
