--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@types/node": "^14.14.6",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
+    "eslint": "^7.13.0",
+    "eslint-plugin-jsdoc": "^30.7.7",
     "ts-loader": "^8.0.9",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5",
@@ -19,6 +23,6 @@
   },
   "scripts": {
     "bundle": "webpack",
-    "lint": "tslint --project ."
+    "lint": "eslint lib/**"
   }
 }
