fix: disable explicit-module-boundary-types

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "plugin:jsdoc/recommended"
   ],
   "rules": {
-    "eol-last": "warn"
+    "eol-last": "warn",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
