--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "^8.1.0",
     "eslint": "^7.13.0",
     "eslint-plugin-jsdoc": "^30.7.7",
+    "snjs": "github:standardnotes/snjs#9e212add83688f65267c9300d7b9d2b1e5772a27",
     "ts-loader": "^8.0.9",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5",
