--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,22 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "jsdoc"],
+  "plugins": ["@typescript-eslint"],
   "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "plugin:jsdoc/recommended"
+    "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
     "eol-last": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "no-multi-spaces": "warn",
-    "keyword-spacing": "warn"
-  }
+    "keyword-spacing": "warn",
+    "curly": "error"
+  },
+  "ignorePatterns": ["webpack.*"],
+  "overrides": [
+    {
+      "files": ["lib/**/*.ts"]
+    }
+  ]
 }
