--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.0.5",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
+    "webpack-merge": "^5.3.0",
     "yarn-or-npm": "^3.0.1"
   },
   "repository": {
@@ -25,7 +26,8 @@
     "url": "git://github.com/sn-extensions/components-api.git"
   },
   "scripts": {
-    "bundle": "yon run lint-fix && webpack && yon run build-types && yon run build-docs",
+    "start": "webpack -w --config webpack.dev.js",
+    "bundle": "yon run lint-fix && webpack --config webpack.prod.js && yon run build-types && yon run build-docs",
     "lint": "eslint",
     "lint-fix": "yon run lint --fix",
     "build-docs": "typedoc",
