fix: include name and version in generated docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
     "forceConsistentCasingInFileNames": true
   },
   "typedocOptions": {
+    "inputFiles": ["./lib"],
+    "name": "SN Components API",
+    "includeVersion": true,
     "mode": "modules",
     "out": "docs"
   }
