feat: jest with test coverage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "include": ["lib/**/*"],
+  "exclude": ["node_modules", "test/**/*"],
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
