--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
     "eslint": "^7.13.0",
+    "jest": "^26.6.3",
     "snjs": "github:standardnotes/snjs#9e212add83688f65267c9300d7b9d2b1e5772a27",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.9",
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
@@ -19,6 +24,25 @@
     "webpack-cli": "^4.2.0",
     "webpack-merge": "^5.3.0",
     "yarn-or-npm": "^3.0.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "lib/**/*.ts"
+    ],
+    "coverageDirectory": "coverage",
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/node_modules"
+    ],
+    "coverageReporters": [
+      "html"
+    ],
+    "testMatch": [
+      "**/?(*.)+(test).+(ts|tsx|js)"
+    ],
+    "transform": {
+      "^.+\\.(ts)$": "ts-jest"
+    },
+    "verbose": true
   },
   "repository": {
     "type": "git",
@@ -30,7 +54,9 @@
     "lint": "eslint",
     "lint-fix": "yon run lint --fix",
     "build-docs": "typedoc",
-    "build-types": "tsc"
+    "build-types": "tsc",
+    "test": "jest",
+    "coverage": "yon test --coverage --silent"
   },
   "types": "dist/@types"
 }
