fix: exclude index.ts from coverage

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "lib/**/*.ts"
+      "lib/**/{!(index),}.ts"
     ],
     "coverageDirectory": "coverage",
     "coveragePathIgnorePatterns": [
