--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build-docs": "typedoc",
     "build-types": "tsc",
-    "bundle": "yon run lint-fix && webpack --config webpack.prod.js && yon run build-types && yon run build-docs",
+    "bundle": "yon run lint-fix && webpack --config webpack.prod.js && yon run build-types",
     "coverage": "yon test --coverage --silent",
     "lint": "eslint",
     "lint-fix": "yon run lint --fix",
