--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["lib/**/*"],
-  "exclude": ["node_modules", "test/**/*"],
+  "exclude": ["node_modules", "test/**/*", "webpack.*.js"],
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
