--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,10 +11,5 @@
     "keyword-spacing": "warn",
     "curly": "error"
   },
-  "ignorePatterns": ["webpack.*"],
-  "overrides": [
-    {
-      "files": ["lib/**/*.ts"]
-    }
-  ]
+  "ignorePatterns": ["webpack.*"]
 }
