--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@standardnotes/snjs": "^2.0.7",
     "@types/jest": "^26.0.15",
+    "@types/jsdom": "^16.2.5",
     "@types/node": "^14.14.6",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
@@ -30,7 +32,6 @@
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
-    "@standardnotes/snjs": "^2.0.7",
     "ts-loader": "^8.0.9",
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
