--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
+    "nock": "^13.0.5",
     "ts-loader": "^8.0.9",
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
