--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@standardnotes/sncrypto-common": "^1.2.9",
     "@standardnotes/snjs": "^2.0.25",
+    "@types/crypto-js": "^4.0.1",
     "@types/jest": "^26.0.15",
     "@types/jsdom": "^16.2.5",
     "@types/node": "^14.14.6",
@@ -29,10 +31,12 @@
     "@typescript-eslint/parser": "^4.6.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
+    "crypto-js": "^4.0.0",
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
     "nock": "^13.0.5",
+    "sodium-plus": "^0.9.0",
     "ts-loader": "^8.0.9",
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
