--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,20 @@
 {
+  "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "extends": ["plugin:@typescript-eslint/recommended"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "rules": {
-    "eol-last": "warn",
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "no-multi-spaces": "warn",
-    "keyword-spacing": "warn",
-    "curly": "error",
-    "quotes": ["warn", "double"]
+    "@typescript-eslint/no-unused-vars" : ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false, "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-explicit-any": ["error", { "ignoreRestArgs": true }],
+    "semi": ["error", "never"],
+    "quotes": ["error", "single"],
+    "object-curly-spacing": ["error", "always"]
   },
   "ignorePatterns": ["webpack.*"]
 }
