--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jsdom": "^16.2.5",
     "@types/libsodium-wrappers": "^0.7.8",
     "@types/node": "^14.14.6",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "babel-jest": "^26.6.3",
@@ -42,6 +43,7 @@
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.5",
+    "uuid": "^8.3.2",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
     "webpack-merge": "^5.3.0"
