--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
   "env": {
     "development": {
-      "presets": ["@babel/preset-env"]
+      "presets": [["@babel/preset-env", { "targets": "defaults" }]]
     },
     "production": {
-      "presets": ["@babel/preset-env"]
+      "presets": [["@babel/preset-env", { "targets": "defaults" }]]
     },
     "test": {
       "presets": [
