--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^4.0.5",
     "uuid": "^8.3.2",
     "webpack": "^5.4.0",
+    "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^4.2.0",
     "webpack-merge": "^5.3.0"
   }
