--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
   ],
   "rules": {
     "@typescript-eslint/no-unused-vars" : ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false, "argsIgnorePattern": "^_" }],
-    "@typescript-eslint/no-explicit-any": ["error", { "ignoreRestArgs": true }],
+    "@typescript-eslint/no-explicit-any": ["warn", { "ignoreRestArgs": true }],
     "semi": ["error", "never"],
     "quotes": ["error", "single"],
     "object-curly-spacing": ["error", "always"]
