--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build:docs": "typedoc",
     "build:types": "tsc",
-    "bundle": "yarn run lint:fix && webpack --config webpack.prod.js && yarn run build:types",
+    "bundle": "yarn run lint:fix && yarn run build:types && webpack --config webpack.prod.js",
     "coverage": "yarn test --coverage --silent",
     "lint": "eslint lib --ext .ts",
     "lint:fix": "yarn run lint --fix",
@@ -19,23 +19,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.7",
     "@standardnotes/sncrypto-common": "^1.2.9",
     "@standardnotes/snjs": "^2.0.29",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.19",
     "@types/jsdom": "^16.2.5",
     "@types/node": "^14.14.6",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
-    "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.1",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
     "nock": "^13.0.5",
-    "ts-loader": "^8.0.9",
+    "ts-jest": "^26.4.4",
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.5",
