--- a/package.json
+++ b/package.json
@@ -1,19 +1,48 @@
 {
   "name": "sn-components-api",
-  "version": "1.2.8",
-  "main": "dist/dist.js",
-  "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "grunt": "^1.0.4",
-    "grunt-babel": "^8.0.0",
-    "grunt-browserify": "^5.3.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-newer": "^1.3.0"
-  },
+  "version": "2.0.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/sn-extensions/components-api.git"
+  },
+  "main": "dist/dist.js",
+  "types": "dist/@types",
+  "scripts": {
+    "build:docs": "typedoc",
+    "build:types": "tsc",
+    "bundle": "yarn run lint:fix && yarn run build:types && webpack --config webpack.prod.js",
+    "coverage": "yarn test --coverage --silent",
+    "lint": "eslint lib --ext .ts",
+    "lint:fix": "yarn run lint --fix",
+    "start": "webpack -w --config webpack.dev.js",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.7",
+    "@standardnotes/sncrypto-common": "^1.2.9",
+    "@standardnotes/snjs": "^2.0.29",
+    "@types/jest": "^26.0.19",
+    "@types/jsdom": "^16.2.5",
+    "@types/node": "^14.14.6",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "babel-loader": "^8.2.2",
+    "eslint": "^7.13.0",
+    "jest": "^26.6.3",
+    "jsdom": "^16.4.0",
+    "nock": "^13.0.5",
+    "ts-jest": "^26.4.4",
+    "tslint": "^6.1.3",
+    "typedoc": "^0.19.2",
+    "typescript": "^4.0.5",
+    "uuid": "^8.3.2",
+    "webpack": "^5.4.0",
+    "webpack-bundle-analyzer": "^4.3.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-merge": "^5.3.0"
   }
 }
