fix: disable type checking during tests

--- a/jest.config.json
+++ b/jest.config.json
@@ -13,7 +13,8 @@
   ],
   "globals": {
     "ts-jest": {
-      "diagnostics": false
+      "diagnostics": false,
+      "isolatedModules": true
     }
   },
   "preset": "ts-jest",
