--- a/jest.config.json
+++ b/jest.config.json
@@ -8,8 +8,15 @@
     "<rootDir>/node_modules"
   ],
   "coverageReporters": [
+    "text",
     "html"
   ],
+  "globals": {
+    "ts-jest": {
+      "diagnostics": false,
+      "isolatedModules": true
+    }
+  },
   "preset": "ts-jest",
   "resetMocks": true,
   "restoreMocks": true,
