--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
     "nock": "^13.0.5",
+    "pre-commit": "^1.2.2",
     "ts-jest": "^26.4.4",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.5",
@@ -43,5 +44,9 @@
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^4.2.0",
     "webpack-merge": "^5.3.0"
-  }
+  },
+  "pre-commit": [
+    "lint",
+    "coverage"
+  ]
 }
