--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "sn-components-api",
+  "name": "@standardnotes/component-relay",
   "version": "2.0.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/sn-extensions/components-api.git"
+    "url": "git://github.com/sn-extensions/component-relay.git"
   },
   "main": "dist/dist.js",
   "types": "dist/@types",
