--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build:docs": "typedoc",
     "build:types": "tsc",
     "bundle": "yarn run lint:fix && yarn run build:types && webpack --config webpack.prod.js",
+    "clean-deploy-cache": "rm -rf node_modules/.cache/gh-pages",
+    "deploy-docs": "yarn run build:docs && gh-pages -b gh-pages -d docs",
     "coverage": "yarn test --coverage --silent",
     "lint": "eslint lib --ext .ts",
     "lint:fix": "yarn run lint --fix",
@@ -32,6 +34,7 @@
     "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.2.2",
     "eslint": "^7.13.0",
+    "gh-pages": "^3.1.0",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
     "nock": "^13.0.5",
