--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -18,4 +18,7 @@ jobs:
         run: yarn install --pure-lockfile
       - name: Update gh-pages
         run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
+          git config user.name github-actions
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           yarn deploy-docs -m 'chore: build docs'
