feat: add .nojekyll

--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -21,4 +21,7 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
           git config user.name github-actions
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-          yarn deploy-docs -m 'chore: build docs'
+          rm -f docs/.nojekyll
+          yarn build:docs
+          touch docs/.nojekyll
+          yarn publish:docs -m 'chore: build docs' -t
