--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build:docs": "typedoc",
     "build:types": "tsc",
     "bundle": "yarn run lint:fix && yarn run build:types && webpack --config webpack.prod.js",
-    "clean-deploy-cache": "rm -rf node_modules/.cache/gh-pages",
-    "deploy-docs": "yarn run build:docs && gh-pages -b gh-pages -d docs",
+    "clean-cache:docs": "rm -rf node_modules/.cache/gh-pages",
+    "publish:docs": "gh-pages -b gh-pages -d docs",
     "coverage": "yarn test --coverage --silent",
     "lint": "eslint lib --ext .ts",
     "lint:fix": "yarn run lint --fix",
