--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -1,7 +1,7 @@
 name: Test pull requests
 on:
   pull_request:
-    branches: [ master, develop ]
+    branches: [ main, develop ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
