--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "rules": {
     "@typescript-eslint/no-unused-vars" : ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false, "argsIgnorePattern": "^_" }],
     "@typescript-eslint/no-explicit-any": ["warn", { "ignoreRestArgs": true }],
+    "@typescript-eslint/no-non-null-assertion": ["off"],
     "semi": ["error", "never"],
     "quotes": ["error", "single"],
     "object-curly-spacing": ["error", "always"]
