--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -2,7 +2,6 @@ name: Test pull requests
 on:
   pull_request:
     branches: [ main, develop ]
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -11,9 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup NodeJS Environment
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '14.x'
+          node-version-file: '.nvmrc'
       - name: Install project dependencies
         run: yarn install --pure-lockfile
       - name: Transpile files
